RESOLVED FIXED 283397
REGRESSION(286827@main): SHOULD NEVER BE REACHED in Invalidator::CheckDescendants WebCore::Style::Invalidator::invalidateIfNeeded(Element &, SelectorMatchingState *)
https://bugs.webkit.org/show_bug.cgi?id=283397
Summary REGRESSION(286827@main): SHOULD NEVER BE REACHED in Invalidator::CheckDescend...
Fujii Hironori
Reported 2024-11-19 21:14:13 PST
After 286827@main, Windows Debug builds layout tests are exiting early. Buildbot: builder Windows-64-bit-Debug-Tests build 409 https://build.webkit.org/#/builders/1190/builds/409 SHOULD NEVER BE REACHED C:\webkit\wb\Source\WebCore\style/StyleInvalidator.cpp(185) : Invalidator::CheckDescendants WebCore::Style::Invalidator::invalidateIfNeeded(Element &, SelectorMatchingState *) 1 00007FF8E597755C WebCore::Style::Invalidator::invalidateIfNeeded 2 00007FF8E59779E7 WebCore::Style::Invalidator::invalidateStyleForDescendants 3 00007FF8E5977878 WebCore::Style::Invalidator::invalidateStyleForTree 4 00007FF8E5977B02 WebCore::Style::Invalidator::invalidateStyle 5 00007FF8E5977B99 WebCore::Style::Invalidator::invalidateStyle 6 00007FF8E598CB9C WebCore::Style::Scope::invalidateStyleAfterStyleSheetChange 7 00007FF8E598C6EC WebCore::Style::Scope::updateActiveStyleSheets 8 00007FF8E598CFF1 WebCore::Style::Scope::flushPendingSelfUpdate 9 00007FF8E36A32A7 WebCore::Style::Scope::flushPendingUpdate 10 00007FF8E3D63443 WebCore::Document::updateStyleIfNeeded 11 00007FF8E3D7E5FF WebCore::Document::finishedParsing 12 00007FF8E452C499 WebCore::HTMLConstructionSite::finishedParsing 13 00007FF8E458AD6F WebCore::HTMLTreeBuilder::finished 14 00007FF8E4532A22 WebCore::HTMLDocumentParser::end 15 00007FF8E45311F7 WebCore::HTMLDocumentParser::attemptToRunDeferredScriptsAndEnd 16 00007FF8E4530F69 WebCore::HTMLDocumentParser::prepareToStopParsing 17 00007FF8E4531BC1 WebCore::HTMLDocumentParser::endIfDelayed 18 00007FF8E4532D32 WebCore::HTMLDocumentParser::resumeParsingAfterScriptExecution 19 00007FF8E4533230 WebCore::HTMLDocumentParser::executeScriptsWaitingForStylesheets 20 00007FF8E3FB55EF WebCore::ScriptableDocumentParser::scriptsWaitingForStylesheetsExecutionTimerFired 21 00007FF8E3FDFDB6 WebCore::Timer::Timer<WebCore::ScriptableDocumentParser,WebCore::ScriptableDocumentParser>::<lambda_1>::operator() 22 00007FF8E3FDFD47 WTF::Detail::CallableWrapper<`lambda at C:\webkit\wb\Source\WebCore\platform\Timer.h:161:22',void>::call 23 00007FF8E0DD0FBE WTF::Function<void ()>::operator() 24 00007FF8E2C26D37 WebCore::Timer::fired 25 00007FF8E4F5D347 WebCore::ThreadTimers::sharedTimerFiredInternal 26 00007FF8E4F601BE WebCore::ThreadTimers::setSharedTimer::<lambda_0>::operator() 27 00007FF8E4F60177 WTF::Detail::CallableWrapper<`lambda at C:\webkit\wb\Source\WebCore\platform\ThreadTimers.cpp:68:41',void>::call 28 00007FF8E0DD0FBE WTF::Function<void ()>::operator() 29 00007FF8E4F07B8D WebCore::MainThreadSharedTimer::fired 30 00007FF8E0F06B28 WebCore::TimerWindowWndProc 31 00007FF9DF5483F1 DispatchMessageW Exception thrown at 0x00007FF8DF778A15 (JavaScriptCore.dll) in WebKitWebProcess.exe: 0xC0000005: Access violation writing location 0x00000000BBADBEEF.
Attachments
Fujii Hironori
Comment 1 2024-11-19 21:20:39 PST
EWS
Comment 2 2024-11-19 22:18:30 PST
Committed 286842@main (c15d3e7295de): <https://commits.webkit.org/286842@main> Reviewed commits have been landed. Closing PR #36875 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-11-19 22:19:14 PST
Note You need to log in before you can comment on or make changes to this bug.