REGRESSION(286827@main): SHOULD NEVER BE REACHED in Invalidator::CheckDescendants WebCore::Style::Invalidator::invalidateIfNeeded(Element &, SelectorMatchingState *) https://bugs.webkit.org/show_bug.cgi?id=283397

Unreviewed crash fix for Windows Debug builds.

* Source/WebCore/dom/Node.h:
Added initializers to uninitialized Node::StyleBitfields members.

Canonical link: https://commits.webkit.org/286842@main